Change password from token. Added endpoint, tests and documentation.
